# plife

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  runner.py
cool_configs/: apex_predator.txt  divide_and_conquer.txt  ecosystem.txt  four_legs.txt  interesting_dynamics.txt  multipart_organism.txt  split_jellyfish.txt
src/: main.c  sim_desc.txt
